# a2a-runtime

./: .gitignore  README.md  main.py  pyproject.toml
agent/travel/: travel_executor.py
agent/weather/: weather_executor.py
client/: test_client.py
server/: conf.py  main.py
server/a2a2/agent_execution/: runtime_agent_executor.py
server/a2a2/apps/jsonrpc/: runtime_fastapi_app.py
server/a2a2/request_handlers/: runtime_request_handler.py
server/common/: model.py  standard_logging.py
server/config_store/: api.py  base.py  default.py
server/libs/redis/: client.py
server/loader/: base.py  default.py
server/notifier/: base.py  redis.py
server/utils/: map.py
tests/: test_map.py
tests/client/: test_client.py
