[tool.poetry]
name = "a2a-runtime"
version = "0.0.1"
description = ""
authors = ["qiankunli <qiankunli@qq.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.5"
dependency-injector = "^4.45.0"
loguru = "^0.7.3"
pydantic-extra-types = "^2.10.2"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
typing-extensions = "^4.13.2"
redis = "^6.2.0"
apscheduler = "^3.11.0"
a2a-sdk = "^0.3.0"
httpx = "^0.28.1"

[tool.poetry.group.lint.dependencies]
mypy = "1.15.0"
importanize = "0.7.0"
ruff = "0.4.8"
types-pymysql = "1.1.0.20250516"
types-cachetools = "^6.1.0.20250717"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
 

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-plugin-pypi-mirror==0.4.2"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--strict-markers --strict-config --durations=5 -svv"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
    "requires: mark tests as requiring a specific library",
    "scheduled: mark tests to run in scheduled testing",
    "compile: mark placeholder test used to compile integration tests without running them",
    "integration: integration tests"
]

# asyncio_mode = "auto"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"
